--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,22 +4,22 @@
   --bs-warning: #fca311;
   --bs-white: #ffffff;
   --bs-gray: #292929;
-  --bs-light: #e5e5e5;
+  --bs-light: #f5f5f5;
   --bs-dark: #000000;
   --bs-danger: #d2042d;
   --bs-success: #6a994e;
 
   --bs-primary: #292929;
-  --bs-secondary: #e5e5e5;
+  --bs-secondary: #f5f5f5;
 
   --bs-primary-rgb: 41, 41, 41;
-  --bs-secondary-rgb: 229, 229, 229;
+  --bs-secondary-rgb: 245, 245, 245;
 
   --bs-warning-rgb: 252, 163, 17;
   --bs-success-rgb: 106, 153, 78;
   --bs-danger-rgb: 210, 4, 45;
   --bs-white-rgb: 255, 255, 255;
-  --bs-light-rgb: 229, 229, 229;
+  --bs-light-rgb: 245, 245, 245;
   --bs-dark-rgb: 0, 0, 0;
 }
 
@@ -45,7 +45,7 @@ html {
 body {
   position: relative;
   overflow-x: hidden;
-  background-color: #e5e5e5;
+  background-color: #f5f5f5;
 }
 
 p {
@@ -70,7 +70,7 @@ a:hover {
 }
 
 .header h1 {
-  color: #e5e5e5 !important;
+  color: #f5f5f5 !important;
 }
 
 
@@ -169,7 +169,7 @@ section,
 .nav-item .nav-link {
   font-family: "Montserrat", sans-serif;
   font-size: 0.95rem;
-  color: #e5e5e5;
+  color: #f5f5f5;
   font-weight: 600;
   letter-spacing: 0.0625em;
 }
@@ -188,7 +188,7 @@ section,
 .cart,
 .navbar-brand,
 .navbar-toggler {
-  color: #e5e5e5;
+  color: #f5f5f5;
   transition: color 0.2s ease-in-out;
 }
 
@@ -296,7 +296,7 @@ section#promise {
 }
 
 section#promise .section-heading {
-  color: #e5e5e5;
+  color: #f5f5f5;
 }
 
 .btn-social {
@@ -318,7 +318,7 @@ section#promise .section-heading {
 .btn-social:active,
 .btn-social:hover {
   background-color: #e5e5e6;
-  border-color: #e5e5e5;
+  border-color: #f5f5f5;
   color: #292929;
 }
 
@@ -345,7 +345,7 @@ section#promise .section-heading {
 }
 
 .modal-body {
-  background-color: rgba(229, 229, 229, 0.9);
+  background-color: rgba(245, 245, 245, 0.9);
 }
 
 /* Horisontal scrool */
